Fixed left and right margins and overflow of buttons

--- a/vera-react-app/src/components/CategoryButton/CategoryButton.css
+++ b/vera-react-app/src/components/CategoryButton/CategoryButton.css
@@ -7,8 +7,8 @@
 
     margin-top: 30px;
     margin-bottom: 30px;
-    margin-right: 40px;
-    margin-left: 40px;
+    margin-right: 20px;
+    margin-left: 20px;
     justify-content: center;
 }
 
