--- a/vera-react-app/src/components/CategoryButtonGroup/CategoryButtonGroup.css
+++ b/vera-react-app/src/components/CategoryButtonGroup/CategoryButtonGroup.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row; 
     justify-content: center;
+
+    flex-wrap: wrap;
 }
 
 .cat-button-group-title {
